--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,6 +17,9 @@
         width: 100%;
         height: 100%;
     }
+    .quick_menu {
+        top: 100%;
+    }
 }
 @media all and (max-width : 1350px){
     header .inner {
